--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
 
     <!-- Footer -->
-    <h2>&copy; ALL RIGHTS RESERVED 2025</h2>
+    <h2>&copy; Notflix 2025</h2>
     
 </body>
 </html>
